--- a/src/pages/PagesAcademia/CadastrarAulas/cadastrarAulas.css
+++ b/src/pages/PagesAcademia/CadastrarAulas/cadastrarAulas.css
@@ -161,6 +161,55 @@ button[type="submit"]:hover,
 option{
   border: none;
 }
+.input-field {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  gap: 10px;
+}
+
+.select-label {
+  font-weight: bold;
+  min-width: 120px;
+}
+
+.select-field {
+  flex: 1;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 16px;
+}
+
+.select-wrapper {
+  background-color: #4CAF84;
+  border-radius: 10px;
+  padding: 14px 18px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+
+.input-field select {
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  background-color: #fff;
+  color: #333;
+  transition: border-color 0.2s;
+}
+
+.input-field select:focus {
+  border-color: #2e8b57;
+  outline: none;
+}
+
+
 
 
 
